<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.eventsauce4j</groupId>
		<artifactId>eventsauce4j</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	<groupId>com.eventsauce4j</groupId>
	<artifactId>eventsauce4j-jpa</artifactId>
	<version>${parent.version}</version>
	<name>eventsauce4j-jpa</name>
	<packaging>jar</packaging>
	<description>eventsauce4j-jpa</description>

	<properties>
		<java.version>17</java.version>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>
	</properties>

	<dependencies>

		<dependency>
			<groupId>com.eventsauce4j</groupId>
			<artifactId>eventsauce4j-api</artifactId>
			<version>${project.version}</version>
		</dependency>
		
		<dependency>
			<groupId>com.eventsauce4j</groupId>
			<artifactId>eventsauce4j-core</artifactId>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
		</dependency>

		<dependency>
			<groupId>jakarta.persistence</groupId>
			<artifactId>jakarta.persistence-api</artifactId>
			<version>3.1.0</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>

	</dependencies>


</project>
